--- a/css/index.css
+++ b/css/index.css
@@ -46,3 +46,10 @@ a::before {
     transform: scale(1.05);
     box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
 }
+
+.effect:hover {
+
+    transform: scale(1.05);
+    text-shadow: 2px 2px 22px 1px rgba(0, 0, 0, 0.24) ;
+
+}
