--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,3 @@
-
-
 header {
     display: flex;
     justify-content: space-between;
@@ -7,7 +5,6 @@ header {
     background-color:#AFD971;
     border-bottom: 10px solid #000000; 
     padding: 10px 20px;
-    
 }
 
 #logo {
@@ -53,3 +50,36 @@ a::before {
     transform: scale(1.08);
     opacity: 0.96;
 }
+
+.background-foto {
+    display: flex;
+    background-color: #0b1426;
+    width: auto;
+    height: 760px;
+    top: 80px;
+}
+
+.box {
+    position: absolute;
+    background-color: #4C5B84;
+    width: 627px;
+    height: 188px;
+    top: 355px;
+    left: 80px; 
+}
+
+#Title {
+   font-size: 60px; 
+   font-family: Quantico, sans-serif;;
+   color: #ffffff;
+   text-align: center;
+   padding: 30px 20px; 
+}
+
+#SubTitle {  
+    font-size: 40px; 
+    font-family: Quantico, sans-serif;;
+    color: #AFD971;
+    text-align: center; 
+ }
+
