create the banner component

--- a/css/components/box.css
+++ b/css/components/box.css
@@ -1,7 +1,5 @@
 .box {
-    display: inline-block;
-    background-color: #4C5B84;
-    width: 600px;
+    background-color: #2e4072;
     box-shadow: 10px 10px 0px #000000;
     text-align: center;
     padding: 42px 44px;     
