--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -23,3 +23,12 @@
     display: flex;
     justify-content: space-around;
 }
+
+.banner .button {
+    background-color: #AFD971;
+    color: #0b1426;
+    width: 150px;
+    font-size: 20px;
+    font-family: Quantico, sans-serif;
+    text-align: center;
+}
