update botton style

--- a/css/components/button.css
+++ b/css/components/button.css
@@ -1,6 +1,6 @@
 .button {
     display: inline-block;
-    background-color: #3A4042;
+    background-color: #2e4072;
     color: white;
     padding: 18px 20px;
     box-shadow: 5px 5px 0px #000000;  
