--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -1,6 +1,6 @@
 .banner {
     box-sizing: border-box;
-    background-image: url(/assets/img/photo.png);
+    background-image: url(../../assets/img/photo.png);
     background-repeat: no-repeat;
     background-size: 100%;
     height: 730px;
