create the component section

--- a/css/components/title.css
+++ b/css/components/title.css
@@ -4,3 +4,10 @@
     color: #ffffff;
     text-shadow: 4px 4px 1px #000000;  
  }
+
+ .title.-second {
+    color: #0b1426;
+    text-shadow: none;
+    text-align: center;
+ }
+
