update section skills

--- a/css/components/wrapper-skill.css
+++ b/css/components/wrapper-skill.css
@@ -8,10 +8,12 @@
 
 .wrapper-skill .skill-tec {
     width: 430px;
+    margin-bottom: 40px;
 }
 
 .wrapper-skill .skill-tec:nth-child(odd) {
     margin-right: 100px;
+    
 }
 
 .wrapper-skill .progress-bar {
