change banner to main-banner

--- a/css/components/main-banner.css
+++ b/css/components/main-banner.css
@@ -1,4 +1,4 @@
-.banner {
+.main-banner {
     box-sizing: border-box;
     background-image: url(../../assets/img/photo.png);
     background-repeat: no-repeat;
@@ -10,22 +10,22 @@
     
 }
 
-.banner .wrapper {
+.main-banner .wrapper {
     display: flex;
     flex-direction: column;
     width: 640px;  
 } 
 
-.banner .box {
+.main-banner .box {
     margin-bottom: 40px;
 }
 
-.banner .navigation {
+.main-banner .navigation {
     display: flex;
     justify-content: space-around;
 }
 
-.banner .button {
+.main-banner .button {
     background-color: #AFD971;
     color: #0b1426;
     width: 150px;
