--- a/css/components/main-title.css
+++ b/css/components/main-title.css
@@ -1,6 +1,6 @@
 .main-title {
     font-size: 70px; 
-    font-family: Quantico, sans-serif;;
+    font-family: Quantico, sans-serif;
     color: #ffffff;
     text-shadow: 4px 4px 1px #000000;  
  }
