--- a/css/components/main-box.css
+++ b/css/components/main-box.css
@@ -2,7 +2,8 @@
     background-color: #2e4072;
     box-shadow: 10px 10px 0px #000000;
     text-align: center;
-    padding: 42px 44px;     
+    padding: 42px 44px; 
+    margin-bottom: 30px;    
 }
 
 .main-box .main-title {
