--- a/css/components/wrapper-card.css
+++ b/css/components/wrapper-card.css
@@ -1,4 +1,11 @@
 .wrapper-card {
     display: flex;
     justify-content: center;
+    
+}
+
+.wrapper-card .logo:hover {
+    transform: scale(1.08);
+    opacity: 0.96;
+    
 }
