update code node-card and main-description

--- a/css/components/main-description.css
+++ b/css/components/main-description.css
@@ -4,5 +4,8 @@
     font-weight: 300px;
     line-height: 1.4;
     font-family: Quantico, sans-serif;
+    margin-left: 50px;
+    margin-right: 50px;
+    text-align: justify;
 
 }
