--- a/css/components/node-card.css
+++ b/css/components/node-card.css
@@ -14,7 +14,7 @@
 .node-card .logo {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
     height: 140px;
     border: 5px solid #000;
     padding-left: 20px;
