--- a/css/components/button-arrow.css
+++ b/css/components/button-arrow.css
@@ -1,9 +1,11 @@
 .button-arrow {
     width: 50px;
     height: 50px;
-    background-color: #0B1426;
+    background-color: #AFD971;
     box-shadow: 5px 5px 0px #000000;
     cursor: pointer;
+    
+
 }
 
 .button-arrow::before {
@@ -13,7 +15,7 @@
     width: 15px;
     height: 15px;
     border: 15px solid transparent;
-    border-left: 28px solid white;
+    border-left: 28px solid #0b1426;
     transform: translate(5px);
 }
 
