animate of the carousel with my first JavaScript

--- a/css/components/button-arrow.css
+++ b/css/components/button-arrow.css
@@ -19,7 +19,11 @@
     transform: translate(5px);
 }
 
-.button-arrow .content {
+.button-arrow.-left .content {
+    display: none;
+}
+
+.button-arrow.-right .content {
     display: none;
 }
 
