--- a/css/components/node-card.css
+++ b/css/components/node-card.css
@@ -21,7 +21,7 @@
     font-size: 25px;
     font-weight: 400;
     color: #AFD971;
-    font-family: Quantico, sans-serif;
+    font-family: 'Quantico', sans-serif;
     margin-bottom: 50px;
 
 }
