--- a/css/components/main-banner.css
+++ b/css/components/main-banner.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     position: relative;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-image: url(../../assets/img/photo.png);
     background-repeat: no-repeat;
     background-size: cover;
