--- a/css/components/main-carousel.css
+++ b/css/components/main-carousel.css
@@ -1,7 +1,30 @@
 .main-carousel {
+    display: flex;
+    justify-content: space-around;
     position: relative;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 80px;
+    padding-right: 80px;
+}
+
+.main-carousel::after {
+    content: '';
+    position: absolute;
+    top: 35px;
+    left: 40px;
+    display: block;
+    height: 6px;
+    width: calc(100% - 80px);
+    background-color: #000;
+}
+
+.main-carousel::before {
+    content: '';
+    position: absolute;
+    top: 35px;
+    left: 0;
+    display: block;
+    border: 3px dashed;
+    width: 99.5%;
 }
 
 .main-carousel .button-arrow {
@@ -17,3 +40,15 @@
 .main-carousel .button-arrow.-right {
     right: 15px;
 }
+
+.main-carousel .items {
+    width: 100%;
+    overflow: hidden;
+}
+
+.main-carousel .elements {
+    display: flex;
+    justify-content: space-between;
+    transition: transform 100ms  ease-in-out;
+}
+
