--- a/css/components/main-input.css
+++ b/css/components/main-input.css
@@ -6,4 +6,11 @@
     width: 100%;
     padding-left: 5px;
     padding-right: 5px;
+    font-family: Quantico, sans-serif;
 }
+
+.main-input.-textarea {
+    height: 320px;
+}
+
+
