create the main-form component

--- a/css/components/main-footer.css
+++ b/css/components/main-footer.css
@@ -1,7 +1,7 @@
 .main-footer {
     display: flex;
     justify-content: center;
-    background-color: #000;
+    background-color: #0b1426;
     padding-top: 28px;
     padding-bottom: 28px
 
