--- a/css/components/main-button.css
+++ b/css/components/main-button.css
@@ -5,7 +5,7 @@
     padding: 18px 20px;
     box-shadow: 5px 5px 0px #000000;  
     margin-right: 0;
-    transition: transform 100ms linear;
+    transition: transform 200ms linear;
     font-size: 20px;
     text-decoration: none;
     font-family: Quantico, sans-serif;
@@ -26,4 +26,7 @@
 
 .main-button.-full {
     width: 100%;
+    height: 40px;
+    padding: 5px;
+   background-color: #0b1426;
 }
